@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-19T08:14:01Z",
-  "count_outdated" : 202,
-  "uniques_outdated" : 174,
-  "count" : 211,
-  "uniques" : 182,
+  "timestamp" : "2023-10-20T08:13:35Z",
+  "count_outdated" : 203,
+  "uniques_outdated" : 175,
+  "count" : 213,
+  "uniques" : 184,
   "clones" : [
-    {
-      "timestamp": "2023-10-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-09T00:00:00Z",
       "count": 3,
@@ -58,6 +49,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
