@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 3,
+  "count": 10,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-10-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-09T00:00:00Z",
       "count": 3,
@@ -31,6 +26,11 @@
       "timestamp": "2023-10-16T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
