@@ -1,3 +1,12 @@
+2023-10-20T08:13:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6585139487 # 1267
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
+* notice: last 14d: unq all: 4 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 174 202 / 182 211
+* notice: next accum: outdated-unq outdated-all / unq all: 175 203 / 184 213
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2023-10-06] / [2023-10-20]
+
 2023-10-19T08:14:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6571741697 # 1264
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
